package com.cjj.designpattern.creator.factory.framework;

/**
 * Created by chenjj on 2018/12/19
 */
public abstract class Product {
    public abstract void use();
}
